--- a/index.html
+++ b/index.html
@@ -36,15 +36,20 @@
 
 
 
-<p style="text-align:justify;text-justify:inter-ideograph;>
-  
-BSc. in Physics, zzz University &emsp;&emsp; June 2013
+<p>
+ BSc. in Physics, zzz University &emsp;&emsp; June 2013
  <br>
 MSc. in Computer Science, yyy of kkk &emsp;&emsp; Oct. 2019 
 
  <br>
 Research Assistant at xxxx  &emsp;&emsp; Dec. 2018 - Feb. 2019 
  </p>
+
+<p>模块内的元素之间为&nbsp;分隔，只支持webkit和Gecko内核浏览器</p>
+<br />
+<div class="demo"><a class="link" href="#none">10元</a>&nbsp;<a class="link" href="#none">20元</a>&nbsp;<a class="link" href="#none">30元</a>&nbsp;<a class="link" href="#none">50元</a>
+</div>
+
 
           
 <hr>
