--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 <h2>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
 
-
+<p style="text-align:justify; text-justify:inter-ideograph;">
+ 文字，需要对齐的文字段落。
+ </p>
 
 <p>
  BSc. in Physics, zzz University &emsp;&emsp; June 2013
