--- a/index.html
+++ b/index.html
@@ -34,23 +34,18 @@
 <h2>
 <a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
 
-<p style="text-align:justify; text-justify:inter-ideograph;">
- 文字，需要对齐的文字段落。
- </p>
+
 
 <p>
- BSc. in Physics, zzz University &emsp;&emsp; June 2013
+ BSc. in Physics, zzz University &emsp;&emsp;&emsp;  &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; June 2013
  <br>
-MSc. in Computer Science, yyy of kkk &emsp;&emsp; Oct. 2019 
+MSc. in Computer Science, yyy of kkk &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Oct. 2019 
 
  <br>
-Research Assistant at xxxx  &emsp;&emsp; Dec. 2018 - Feb. 2019 
+Research Assistant at xxxx  &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
  </p>
 
-<p>模块内的元素之间为&nbsp;分隔，只支持webkit和Gecko内核浏览器</p>
-<br />
-<div class="demo"><a class="link" href="#none">10元</a>&nbsp;<a class="link" href="#none">20元</a>&nbsp;<a class="link" href="#none">30元</a>&nbsp;<a class="link" href="#none">50元</a>
-</div>
+
 
 
           
