--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
 <p>
- BSc. in Physics, zzzzz University  &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;  &emsp;&emsp;&emsp; June 2013
+ BSc. in Physics, zzzzz University  &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;  &emsp;&emsp;&emsp; June 2013
  <br>
 MSc. in Computer Science, yyyz University of kkkkkkkkk &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Oct. 2019 
 
