--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Research Assistant at yyyz xxxxxxxxxx of kkkkkkkkk  &emsp;&emsp; &emsp;&emsp;&em
 <a id="工作经历" class="anchor" href="#%E5%B7%A5%E4%BD%9C%E7%BB%8F%E5%8E%86" aria-hidden="true"><span class="octicon octicon-link"></span></a>Working Experience
  </h2>
 
-<h3> <strong>20xx/01-　lalalla</strong>　
+<h3> <strong>20xx/01-　ssssss ssss sssssss at ssssssssssss</strong>　
 </h3>
 
           
@@ -119,7 +119,7 @@ Research Assistant at yyyz xxxxxxxxxx of kkkkkkkkk  &emsp;&emsp; &emsp;&emsp;&em
 <p>Building localized business metric system and data model from 0 to 1 </p>
   
 
-<h3> 20xx/01-　　lalalla</strong></p> </h3>
+<h3> 20xx/01-　　dddd dddddddd aa ddddddddddd</strong></p> </h3>
 <p>Use Hive SQL and R with machine learning knowledge to process data, build models, implement visualization, draw conclusions, and suggest improvements. Conduct experiments such as A/B testing on millions of users. Evaluate strategy effectiveness with statistical models and tests. 
 </p>
 
