--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
 
 <p>
- BSc. in Physics, zzzzz University  &emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;  &emsp;&emsp;&emsp; June 2013
+BSc. in Physics, zzzzz University&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;June 2013
  <br>
-MSc. in Computer Science, yyyz University of kkkkkkkkk &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Oct. 2019 
+MSc. in Computer Science, yyyz University of kkkkkkkkk&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;Oct. 2019 
 
  <br>
-Research Assistant at yyyz xxxxxxxxxx of kkkkkkkkk  &emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
+Research Assistant at yyyz xxxxxxxxxx of kkkkkkkkk &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
  </p>
 
 
