--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Resume</title>
+    <title>Resume of Wei</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Resume</h1>
-        <a href="https://github.com/yhwei/resumelaterversion" class="button"><small>View project on</small> GitHub</a>
+        <h1>Wei</h1>
       </div>
     </header>
 
@@ -208,8 +207,8 @@ Research Assistant at yyyz xxxxxxxxxx of kkkkkkkkk &nbsp;&emsp; &emsp;&emsp;&ems
 
 <p><font size=3><strong>Contact Information </strong></font></p>
 <ul>
-  <li>Email: xxxx(at)gmail(dot)com </li>
-  <li>Phone: 137XXXXXXX </li>
+  <li>Email: yhwei09(at)gmail(dot)com </li>
+
 </ul>
          
   </aside>
