--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ BSc. in Physics, Fudan University&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&ems
 MSc. in Computer Science, City University of Hong Kong &nbsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;Oct. 2019 
 
  <br>
-<font size=15>Research Assistant at City University of Hong Kong &nbsp;&nbsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
+<font size=20>Research Assistant at City University of Hong Kong &nbsp;&nbsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
  </font>
   </p>
 
@@ -133,7 +133,7 @@ MSc. in Computer Science, City University of Hong Kong &nbsp; &emsp;&emsp; &emsp
  <a id="2" class="anchor" href="#%E6%94%B9%E8%BF%9B%E6%B3%A8%E5%86%8C%E7%99%BB%E5%BD%95%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Order dispatch drivers based on forecasting models </strong>      
 <ul>    
 <li>Conducted regression analysis of driver selection for dispatching </li> 
-<li>Evaluated algorithm effectiveness with A/B testing and causal inference experiment </li>
+<li>Evaluated algorithm effectiveness with <strong> multiple A/B testing methods </strong> </li>
 <li>Reduced the imbalance between driver and passenger’s matching  </li>
 </ul> 
  
@@ -143,7 +143,7 @@ MSc. in Computer Science, City University of Hong Kong &nbsp; &emsp;&emsp; &emsp
 <ul>    
 <li>Applied clustering, cohort analysis to group users for operation strategies</li> 
 <li>Presented complex SQL templates for regular operation reporting </li> 
-<li>Help operation team to distinguish causal effects from correlation, leading to the correct strategy to reduce user churn</li> 
+<li>Help operation team to distinguish <strong> causal effects </strong> from correlation, leading to the correct strategy to reduce user churn</li> 
 </ul> 
  
     
