--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ MSc. in Computer Science, City University of Hong Kong &nbsp; &emsp;&emsp; &emsp
 
 <p> Member and Post Recommendation</p>
 <ul>
-<li>Apply clustering to users for recommendation of post-to-member in App feeds  </li>
+<li>Apply clustering to members for recommendation of post-to-member in App feeds  </li>
 </ul>         
         
         
