--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@ BSc. in Physics, Fudan University&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&ems
  <br>
 MSc. in Computer Science, City University of Hong Kong &nbsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;Oct. 2019 
 
-
- <ul>
 <font size=2>
- <li> Research Assistant at City University of Hong Kong &emsp; &emsp; &emsp; &emsp; &nbsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
+ <li> Research Assistant at City University of Hong Kong &emsp;&emsp;&emsp;&emsp; &emsp; &emsp; &emsp; &nbsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
  </font>
  </li>
- </ul>
   </p>
 
 
