--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 BSc. in Physics, Fudan University&emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;June 2013
  <br>
 MSc. in Computer Science, City University of Hong Kong &nbsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp;Oct. 2019 
-
+<br>
 <font size=2>
- <li> Research Assistant at City University of Hong Kong &emsp;&emsp;&emsp;&emsp; &emsp; &emsp; &emsp; &nbsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
+Research Assistant at City University of Hong Kong &emsp;&emsp; &emsp; &emsp; &emsp; &nbsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp; &emsp;&emsp;&emsp; Dec. 2018 - Feb. 2019 
  </font>
- </li>
+
   </p>
 
 
