--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Research Assistant at City University of Hong Kong &nbsp;&emsp;&emsp; &emsp;&ems
 </p>
 <p><strong>Machine Learning</strong></p>
 <ul>
-<li>Clustering, Logistic Regression, Decision Tree, Random Forest, SVM, etc. </li>
+<li>Clustering, Regressions, Decision Tree, Random Forest, SVM, etc. </li>
 </ul>
 <p><strong><p>Statistics, A/B Testing, Causal Inference </strong></p>
           
