--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <h2>
-<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eduction</h2>
+<a id="教育背景" class="anchor" href="#%E6%95%99%E8%82%B2%E8%83%8C%E6%99%AF" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education</h2>
 
 
 
