--- a/index.html
+++ b/index.html
@@ -61,24 +61,7 @@ Research Assistant at City University of Hong Kong &nbsp;&emsp;&emsp; &emsp;&ems
 
           
 <h4>
-<a id="多维度分析验证提升用户留存率" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Data Solution</strong>
-</h4>
-
-<ul>
-<li>Design Segment event tracking for website, mini-program
-
-</li>
-<li>ETL pipeline: Complete the production test and data validation, build data model in Snowflake data warehouse
-
-</li>
-<li>Create dashboard for multiple teams, help them track and achieve OKRs
-</li>
-</ul>
-
-
-
-<h4>
-<a id="完善数据记录设计数据可视化后台" class="anchor" href="#%E5%AE%8C%E5%96%84%E6%95%B0%E6%8D%AE%E8%AE%B0%E5%BD%95%E8%AE%BE%E8%AE%A1%E6%95%B0%E6%8D%AE%E5%8F%AF%E8%A7%86%E5%8C%96%E5%90%8E%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Data Science and Analytics</strong>
+<a id="完" class="anchor" href="#%E5%AE%8C%E5%96%84%E6%95%B0%E6%8D%AE%E8%AE%B0%E5%BD%95%E8%AE%BE%E8%AE%A1%E6%95%B0%E6%8D%AE%E5%8F%AF%E8%A7%86%E5%8C%96%E5%90%8E%E5%8F%B0" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Data Science and Analytics</strong>
 </h4>
 
 <p>A/B Testing  </p>
@@ -88,10 +71,10 @@ Research Assistant at City University of Hong Kong &nbsp;&emsp;&emsp; &emsp;&ems
 </li>
 <li>Design and analyze experiment for website design, improve user experience and potential customer’s conversion
 </li>
-</ul>
-
-  
+</ul>  
 </h4>
+
+
 
 <p>Sales Efficiency and Intelligence</p>  
   
@@ -116,7 +99,21 @@ Research Assistant at City University of Hong Kong &nbsp;&emsp;&emsp; &emsp;&ems
 <li>Provide Looker (data visualization tool) training for multiple teams, empower teams to do self-analysis with more flexibility
 <li>Share statistic learnings and analysis findings, equip team to be more data driven </li>
 </ul>
-        
+
+<h4>
+<a id="多" class="anchor" href="#%E5%A4%9A%E7%BB%B4%E5%BA%A6%E5%88%86%E6%9E%90%E9%AA%8C%E8%AF%81%E6%8F%90%E5%8D%87%E7%94%A8%E6%88%B7%E7%95%99%E5%AD%98%E7%8E%87" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>Data Solution</strong>
+</h4>
+
+<ul>
+<li>Design Segment event tracking for website, mini-program
+
+</li>
+<li>ETL pipeline: Complete the production test and data validation, build data model in Snowflake data warehouse
+
+</li>
+<li>Create dashboard for multiple teams, help them track and achieve OKRs
+</li>
+</ul>
 <p>Building localized business metric system and data model from 0 to 1 </p>
   
 
